# bali_task

./: .env  .gitignore  Dockerfile  card.html  carousel_ph.db  docker-compose.yaml  index.html  links  main.py  pyproject.toml  test.js  test.py
profiles/Carousell/: Local State  first_party_sets.db
profiles/Carousell/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  SharedStorage  Top Sites  Visited Links  Web Data
profiles/Carousell/Default/DawnGraphiteCache/: data_1  index
profiles/Carousell/Default/DawnWebGPUCache/: data_1  index
profiles/Carousell/Default/Extension Rules/: LOG
profiles/Carousell/Default/Extension Scripts/: LOG
profiles/Carousell/Default/Extension State/: LOG  LOG.old
profiles/Carousell/Default/GPUCache/: data_0  data_1  data_2  index
profiles/Carousell/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
profiles/Carousell/Default/Session Storage/: LOG  LOG.old  MANIFEST-000001
profiles/Carousell/Default/Site Characteristics Database/: LOG  LOG.old
profiles/Carousell/Default/WebStorage/: QuotaManager
profiles/Carousell/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  index
profiles/Carousell/GraphiteDawnCache/: data_1  index
profiles/Carousell/ShaderCache/: data_1  index
profiles/Carousell/segmentation_platform/: ukm_db  ukm_db-journal
proga/database/: __init__.py
proga/parser/: main_parser.py
(+1934 files in other folders)
